--- a/wp-content/themes/ushipnetwork/sass/_partials/modules/_press.scss
+++ b/wp-content/themes/ushipnetwork/sass/_partials/modules/_press.scss
@@ -1,5 +1,6 @@
 .pressStrip {
   @include container(1120px, 30px, 50px, 20px);
+  width: 100%;
   display: flex;
   justify-content: center;
 
