--- a/wp-content/themes/ushipnetwork/style.css
+++ b/wp-content/themes/ushipnetwork/style.css
@@ -1965,6 +1965,7 @@ article .post-featureImage {
   padding-right: 20px;
   padding-bottom: 50px;
   padding-left: 20px;
+  width: 100%;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
